feat(config-api): content management spec
