# jans-config-api/server/src/main/java/io/jans/configapi/filters/SpecFilter.java
@@ -6,8 +6,13 @@
 
 package io.jans.configapi.filters;
 
+import io.jans.as.common.model.registration.Client;
+import io.jans.as.persistence.model.Scope;
+
 import io.swagger.v3.oas.models.media.MediaType;
 import io.swagger.v3.oas.models.Operation;
+import io.swagger.v3.oas.models.media.Schema;
+import io.swagger.v3.oas.models.media.MapSchema;
 import io.swagger.v3.oas.models.responses.*;
 import io.swagger.v3.oas.models.examples.Example;
 import io.swagger.v3.core.filter.AbstractSpecFilter;
@@ -17,6 +22,7 @@ import java.io.*;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 
 import org.apache.commons.lang.StringUtils;
 
@@ -31,11 +37,32 @@ public class SpecFilter extends AbstractSpecFilter {
 
                 setRequestExample(operation);
                 setResponseExample(operation);
+            
             }
         } catch (Exception ex) {
             //ex.printStackTrace();
         }
         return Optional.of(operation);
+    }
+    
+    @Override
+    public Optional filterSchema(Schema schema, Map params, Map cookies, Map headers){
+        Schema newUserSchema = new Schema<Map<String, Object>>()
+                .addProperties("name",new Schema().example("John123"))
+                .addProperties("password",new Schema().example("P4SSW0RD"))
+                .addProperties("image",new Schema().example("https://robohash.org/John123.png"));
+
+        
+        Schema clientAuthSchema =  new Schema()
+                .description("clientAuthSchema")
+                .addProperties("children", new MapSchema()
+                        .additionalProperties(new Schema().$ref("#/components/schemas/Scope")));
+                
+        
+        schema.addProperty("newUserSchema", newUserSchema);
+        schema.addProperty("clientAuthSchema", clientAuthSchema);
+        
+        return Optional.of(schema);
     }
 
     private void setRequestExample(Operation operation) {
